improve searching/insert